fix: fix backface-visibility issue on some browsers

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -183,8 +183,9 @@ main {
   width: 160px;
   height: 200px;
   padding: 20px 20px;
-  backface-visibility: hidden;
+  background-color: white;
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
